src/bin/crates-admin/snapshots/crates_admin__sync_index__tests__enqueue_sync_jobs_git_and_sparse.snap
---
source: src/bin/crates-admin/sync_index.rs
expression: all_jobs(&mut conn).await
---
[
  {
    "job_type": "sync_to_git_index",
    "data": {
      "krate": "foo"
    }
  },
  {
    "job_type": "sync_to_git_index",
    "data": {
      "krate": "bar"
    }
  },
  {
    "job_type": "sync_to_sparse_index",
    "data": {
      "krate": "foo"
    }
  },
  {
    "job_type": "sync_to_sparse_index",
    "data": {
      "krate": "bar"
    }
  }
]
